--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,152 @@
-transformers==4.46.0
-wandb
-webdataset
-omegaconf
-pyarrow
-pandas
-jaxtyping
+absl-py==2.3.0
+accelerate==1.7.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.6
+aiosignal==1.3.2
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+async-timeout==5.0.1
+attrs==25.3.0
+braceexpand==0.1.7
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.1
+clip @ git+https://github.com/openai/CLIP.git@dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1
+contourpy==1.3.2
+cycler==0.12.1
+datasets==3.6.0
+decorator==5.2.1
+deepspeed==0.16.9
 diffusers==0.32.2
-typeguard
-accelerate
-deepspeed
-lightning
-datasets
-image-reward
+dill==0.3.8
+docker-pycreds==0.4.0
+einops==0.8.1
+exceptiongroup==1.3.0
+fairscale==0.4.13
+fastapi==0.115.12
+ffmpy==0.5.0
+filelock==3.18.0
+fonttools==4.58.1
+frozenlist==1.6.0
+fsspec==2025.3.0
+ftfy==6.3.1
+gitdb==4.0.12
+GitPython==3.1.44
+gradio==5.32.0
+gradio_client==1.10.2
+groovy==0.1.2
+grpcio==1.72.1
+h11==0.16.0
+hf-xet==1.1.2
+hjson==3.1.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.32.3
+idna==3.10
+image-reward==1.5
+imageio==2.37.0
+imageio-ffmpeg==0.6.0
+importlib_metadata==8.7.0
+jaxtyping==0.3.2
+Jinja2==3.1.6
+kiwisolver==1.4.8
+latex2sympy2_extended==1.10.1
+lightning==2.5.1.post0
+lightning-utilities==0.14.3
+Markdown==3.8
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+math-verify==0.7.0
+matplotlib==3.10.3
+mdurl==0.1.2
+moviepy==2.2.1
+mpmath==1.3.0
+msgpack==1.1.0
+multidict==6.4.4
+multiprocess==0.70.16
+networkx==3.4.2
+ninja==1.11.1.4
+numpy==2.2.6
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+omegaconf==2.3.0
+orjson==3.10.18
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+platformdirs==4.3.8
+proglog==0.1.12
+propcache==0.3.1
+protobuf==6.31.1
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pyarrow==20.0.0
+pydantic==2.11.5
+pydantic_core==2.33.2
+pydub==0.25.1
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+pytorch-lightning==2.5.1.post0
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+ruff==0.11.12
+safehttpx==0.1.6
+safetensors==0.5.3
+scipy==1.15.3
+semantic-version==2.10.0
+sentry-sdk==2.29.1
+setproctitle==1.3.6
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+starlette==0.46.2
+sympy==1.14.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+timm==0.6.13
+tokenizers==0.20.3
+tomlkit==0.13.2
+torch==2.7.0
 torchmetrics==1.6.2
-clip @ git+https://github.com/openai/CLIP.git
+torchvision==0.22.0
+tqdm==4.67.1
+transformers==4.46.0
+triton==3.3.0
 trl==0.17.0
-math_verify 
-gradio>=4.44.1
+typeguard==4.4.2
+typer==0.16.0
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.3
+wadler_lindig==0.1.6
+wandb==0.19.11
+wcwidth==0.2.13
+webdataset==0.2.111
+websockets==15.0.1
+Werkzeug==3.1.3
+xxhash==3.5.0
+yarl==1.20.0
+zipp==3.22.0
