--- a/accelerate_configs/test_run.yaml
+++ b/accelerate_configs/test_run.yaml
@@ -1,8 +1,17 @@
 compute_environment: LOCAL_MACHINE
-distributed_type: 'NO'
+deepspeed_config:
+  deepspeed_multinode_launcher: standard
+  gradient_accumulation_steps: 2
+  gradient_clipping: 1.0
+  offload_optimizer_device: cpu
+  offload_param_device: cpu
+  zero3_init_flag: true
+  zero3_save_16bit_model: true
+  zero_stage: 3
+  zero_optimization:
+    overlap_comm: false
+distributed_type: DEEPSPEED
 downcast_bf16: 'no'
-gpu_ids: '0'
-machine_rank: 0
 main_training_function: main
 mixed_precision: bf16
 num_machines: 1
