--- a/configs/t2m_test.yaml
+++ b/configs/t2m_test.yaml
@@ -2,6 +2,7 @@ wandb:
   entity: null
 #  run_id: askkz9i2
   resume: 'auto'
+  mode: 'disabled'  # Disable wandb for testing
 
 experiment:
     project: "mmada-training-t2m"
@@ -10,13 +11,18 @@ experiment:
     save_every: 10
     eval_every: 5
     generate_every: 10
-    log_every: 5
+    log_every: 1
     log_grad_norm_every: 100
-    resume_from_checkpoint: "latest"
+    resume_from_checkpoint: null  # Don't resume for testing
     val_every: 50
 
 model:
-    vq_model:
+    
+    image_vq_model:
+        type: "magvitv2"
+        vq_model_name: "showlab/magvitv2"
+
+    motion_vq_model:
         type: "vq"
         vq_model_name: "VQVAE"
         depth: 3
@@ -33,11 +39,12 @@ model:
         tokenizer_path: "GSAI-ML/LLaDA-8B-Instruct"
         pretrained_model_path: "Gen-Verse/MMaDA-8B-MixCoT"
         w_clip_vit: False
-        new_vocab_size: 134659
+        new_vocab_size: 135053  # Fixed: text (126349) + image (8192) + motion (512)
         llm_vocab_size: 126464
-        codebook_size: 512
+        image_codebook_size: 8192
+        motion_codebook_size: 512  # Back to 512 actual motion codes
         num_vq_tokens: 256
-        num_new_special_tokens: 3
+        num_new_special_tokens: 0
         tie_word_embeddings: False
 
     gradient_checkpointing: True
@@ -82,7 +89,7 @@ training:
     mixed_precision: "bf16"
     enable_tf32: True
     seed: 10086
-    max_train_steps: 100
+    max_train_steps: 5
     overfit_one_batch: False
     cond_dropout_prob: 0.1
     min_masking_rate: 0.0
@@ -93,4 +100,5 @@ training:
     t2i_coeff: 1.0
     lm_coeff: 0.1
     mmu_coeff: 0.5
+    t2m_coeff: 1.0        # Motion training coefficient
     validation_seed: 42
